WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260485
[JSC] Generator functions should not be Annex B hoisting candidates
https://bugs.webkit.org/show_bug.cgi?id=260485
Summary
[JSC] Generator functions should not be Annex B hoisting candidates
Alexey Shvayka
Reported
2023-08-21 13:23:56 PDT
Related test262 failures: * test/language/statements/switch/scope-lex-async-function.js * test/language/statements/switch/scope-lex-async-generator.js * test/language/statements/switch/scope-lex-generator.js Fix: add template parameter to `std::pair<DeclarationResultMask, ScopeRef> declareFunction(const Identifier*)` of Parser.h to avoid hoisting function unconditionally.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-08-21 13:24:44 PDT
Comment hidden (obsolete)
<
rdar://problem/114213545
>
Radar WebKit Bug Importer
Comment 2
2023-08-21 13:25:42 PDT
<
rdar://problem/114213642
>
Alexey Shvayka
Comment 3
2023-09-22 15:49:00 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18108
EWS
Comment 4
2023-09-22 19:38:00 PDT
Committed
268352@main
(b215cab40b67): <
https://commits.webkit.org/268352@main
> Reviewed commits have been landed. Closing PR #18108 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug