[JSC] Generator functions should not be Annex B hoisting candidates https://bugs.webkit.org/show_bug.cgi?id=260485 <rdar://problem/114213642>

Reviewed by Justin Michaud.

Per Annex B [1], only functions defined using a FunctionDeclaration are candidates for legacy
block-level declaration hoisting. Generator functions are defined using a different parse node [2].

Aligns JSC with V8 and SpiderMonkey.

[1]: https://tc39.es/ecma262/#sec-web-compat-functiondeclarationinstantiation (step 29.a)
[2]: https://tc39.es/ecma262/#prod-GeneratorDeclaration

* JSTests/stress/generator-function-declaration-isnt-sloppy-mode-hoisting-candidate.js: Added.
* Source/JavaScriptCore/parser/Parser.cpp:
(JSC::Parser<LexerType>::parseFunctionDeclaration):

Canonical link: https://commits.webkit.org/268352@main